@@ -201,7 +201,7 @@ void tftp_request(struct listener *listen, time_t now)
       if (!iface_check(listen->family, &addra, name, NULL))
 	{
 	  if (!option_bool(OPT_CLEVERBIND))
-	    enumerate_interfaces(); 
+	    enumerate_interfaces(0); 
 	  if (!loopback_exception(listen->tftpfd, listen->family, &addra, name) &&
 	      !label_exception(if_index, listen->family, &addra) )
 	    return;
